cloud/platform/selfhost/terraform/prod/lockbox/lockbox-control-plane/files/api-gateway/envoy-resources.yaml
listeners:
  - name: healthcheck_v4
    address:
      socket_address: { address: 0.0.0.0, port_value: 4486 }
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              http_protocol_options:
                accept_http_10: true
              route_config:
                name: healthcheck
                virtual_hosts:
                  - name: healthcheck
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: gateway_healthcheck
                          timeout: 60s
              http_filters:
                - name: envoy.router

  - name: healthcheck_v6
    address:
      socket_address: { address: "::", port_value: 4486 }
    filter_chains:
      - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              http_protocol_options:
                accept_http_10: true
              route_config:
                name: healthcheck
                virtual_hosts:
                  - name: healthcheck
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/" }
                        route:
                          cluster: gateway_healthcheck
                          timeout: 60s
              http_filters:
                - name: envoy.router

clusters: []
